added restrictions + creating analytical admin dashBoard